# map-tile-toolkit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  fuzz.yml
benches/: clipping.rs  slicing.rs
examples/: profile.rs  profile_clip.rs  profile_slice.rs  profile_slice_all.rs  simplify_slice.rs  visualize.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: slice_equivalence.rs
src/: clip.rs  clip_polyline.rs  error.rs  extents.rs  geo.rs  geo_utils.rs  grid.rs  lib.rs  merge.rs  slice.rs  slice_all.rs  slicer.rs  stripe.rs  tile.rs  vertex.rs
tests/: clip_polyline.rs  errors.rs  feature_render.rs  geo_utils.rs  geojson_snapshots.rs  grid.geojson  merge.rs  mvalue.rs  slice.rs  tile_extents.rs  tiled_geometry.rs
tests/fixtures/: boundary_zigzag.geojson  collinear_span.geojson  crossing_empty_tile.geojson  crossing_many_empty.geojson  dup_midline.geojson  graze_far_tile.geojson  multiline.geojson  multiline_mixed.geojson  negative_crossing.geojson  negative_tiles.geojson  out_abc_back_to_a.geojson  reenter_tile_1_out.geojson  reenter_tile_2_out.geojson  reenter_tile_3_out.geojson  single_tile.geojson  snap_and_fix_511.wkt  staircase.geojson  stepped_span.geojson  tile_corners.geojson  two_tiles.geojson  vertical_span.geojson
tests/fixtures/geojson/: diagonal_line.geojson  triangle.geojson  two_squares.geojson
tests/fixtures/polygon/: snap-and-fix511.geojson  square_over_corner.geojson  triangle.geojson  triangle_inside.geojson
tests/fixtures/polygon_with_holes/: europe_hole.geojson  hole_over_edge.geojson  square_hole_inside.geojson
tests/fixtures/polyline/: boundary_vertices.geojson  crossing_without_inside_vertex.geojson  dedup_to_one_vertex.geojson  duplicate_vertices.geojson  empty_line.geojson  entry_and_exit.geojson  entry_vertex_minimal.geojson  fully_inside.geojson  fully_outside.geojson  leading_outside_start.geojson  multiple_grazes.geojson  nearest_leading_outside.geojson  reentry_two_pieces.geojson  single_graze.geojson  single_inside_vertex.geojson  single_outside_vertex.geojson  trailing_outside_end.geojson  two_consecutive_outside_split.geojson
tests/snapshots/: boundary_zigzag.snap.geojson  collinear_span.snap.geojson  crossing_empty_tile.snap.geojson  crossing_many_empty.snap.geojson  diagonal_line_slice_tile.snap.geojson  dup_midline.snap.geojson  europe_hole_slice_tile.snap.geojson  graze_far_tile.snap.geojson  multiline.snap.geojson  multiline_mixed.snap.geojson  negative_crossing.snap.geojson  negative_tiles.snap.geojson  out_abc_back_to_a.snap.geojson  reenter_tile_1_out.snap.geojson  reenter_tile_2_out.snap.geojson  reenter_tile_3_out.snap.geojson  single_tile.snap.geojson  staircase.snap.geojson  stepped_span.snap  stepped_span.snap.geojson  tile_corners.snap.geojson  triangle_slice_all_tiles.snap.geojson  triangle_slice_tile.snap  two_squares_slice_all_tiles.snap.geojson  two_squares_slice_tile.snap.geojson  two_tiles.snap.geojson  vertical_span.snap.geojson
tests/snapshots-5/: boundary_zigzag-5.snap.geojson  crossing_many_empty-5.snap.geojson  dup_midline-5.snap.geojson  graze_far_tile-5.snap.geojson  multiline-5.snap.geojson  multiline_mixed-5.snap.geojson  negative_crossing-5.snap.geojson  negative_tiles-5.snap.geojson  out_abc_back_to_a-5.snap.geojson  reenter_tile_1_out-5.snap.geojson  reenter_tile_2_out-5.snap.geojson  reenter_tile_3_out-5.snap.geojson  single_tile-5.snap.geojson  staircase-5.snap.geojson  stepped_span-5.snap.geojson  tile_corners-5.snap.geojson  two_tiles-5.snap.geojson  vertical_span-5.snap.geojson
tests/snapshots/clip_polyline/: boundary_vertices.snap.geojson  crossing_without_inside_vertex.snap.geojson  dedup_to_one_vertex.snap.geojson  duplicate_vertices.snap.geojson  empty_line.snap.geojson  entry_and_exit.snap.geojson  entry_vertex_minimal.snap.geojson  fully_inside.snap.geojson  fully_outside.snap.geojson  leading_outside_start.snap.geojson  multiple_grazes.snap.geojson  nearest_leading_outside.snap.geojson  (+19 more)
tests/support/: mod.rs
(+37 files in other folders)
