[package]
name = "map-tile-toolkit"
version = "0.1.0"
description = "Clip integer polylines into per-tile pieces on a simple tile grid"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/map-tile-toolkit"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["mvt", "tile", "geo", "polyline", "clip"]
categories = ["science::geo"]
rust-version = "1.88"

[[bench]]
name = "slicing"
harness = false

[dependencies]
geo-types = "0.7.19"
thiserror = "2"

[dev-dependencies]
criterion = "0.8.2"
geojson = { version = "1.0.0", features = ["geo-types"] }
insta = "1"
serde_json = "1"
test_each_file = "0.3.7"

# Release build with debug symbols, used by `just flamegraph-*` for readable profiles.
[profile.profiling]
inherits = "release"
debug = true

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
# Restrictions
disallowed_methods = "forbid"
panic_in_result_fn = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
use_self = "warn"

# Pedantics without being too noisy
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
